; ModuleID = '/home/carl/AnghaBench/lab/engine/code/client/extr_cl_main.c_CL_OldGame.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/client/extr_cl_main.c_CL_OldGame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@cl_oldGameSet = common dso_local global i64 0, align 8
@qfalse = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [8 x i8] c"fs_game\00", align 1
@cl_oldGame = common dso_local global i32 0, align 4
@qtrue = common dso_local global i32 0, align 4
@clc = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @CL_OldGame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CL_OldGame() #0 {
  %1 = load i64, i64* @cl_oldGameSet, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %11

3:                                                ; preds = %0
  %4 = load i64, i64* @qfalse, align 8
  store i64 %4, i64* @cl_oldGameSet, align 8
  %5 = load i32, i32* @cl_oldGame, align 4
  %6 = load i32, i32* @qtrue, align 4
  %7 = call i32 @Cvar_Set2(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %5, i32 %6)
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @clc, i32 0, i32 0), align 4
  %9 = load i64, i64* @qfalse, align 8
  %10 = call i32 @FS_ConditionalRestart(i32 %8, i64 %9)
  br label %11

11:                                               ; preds = %3, %0
  ret void
}

declare dso_local i32 @Cvar_Set2(i8*, i32, i32) #1

declare dso_local i32 @FS_ConditionalRestart(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
